chatmap-ui/src/styles/main.css
/* ... */
.footer__bottom {
    display: flex;
    justify-content: space-between;
    align-items: end;
    margin-top: var(--hot-spacing-large);
}

.footer__logo img {
    height: var(--hot-spacing-2x-large);
}

.footer__copy {
    max-width: 25rem;
    text-align: right;
    font-size: var(--hot-font-size-small);
    color: var(--hot-color-gray-800);
    line-height: var(--hot-line-height-dense);
    font-family: var(--hot-font-sans);
    font-weight: normal;
}

/* File upload */
/* Fix a bug with react-drag-drop-files styling
https://github.com/KarimMokhtar/react-drag-drop-files/issues/121 */
.fileUploadMain  {
    outline: none !important;
    height: 100%;
    display: block;
    width: auto;
}

/* Map */

.map {
    height: 100vh;
    text-align: center;
    justify-content: center;
    display: flex;
}

.mapDisabled {
    opacity: .5;
}

.activePopupFeatureContent {
    font-size: var(--hot-font-size-medium);
}

.popup .maplibregl-popup-content {
    padding: 0;
}

.maplibregl-ctrl-top-right  {
    margin-top: 52px;
    padding-top: var(--hot-spacing-medium);
    margin-right: var(--hot-spacing-x-small);
    z-index: 0;
}

.map-ctrl {
    box-shadow: 0 0 3px color-mix(in srgb, var(--hot-color-neutral-1000) 50%, transparent);;
    width: 48px;
    height: 48px;
    border-radius: var(--hot-border-radius-large);
    background-color: var(--hot-color-neutral-0);
    border: 1px solid var(--hot-color-gray-50);
    cursor: pointer;
}

.map-background-ctrl {
    background-size: cover;
}

.map-background-ctrl-sat {
    background-image: url("/assets/map-sat.png");
}
.map-background-ctrl-osm {
    background-image: url("/assets/map-osm.png");
}

.userinfo {
    font-size: var(--hot-font-size-small);
    text-align: left;
    padding-left: var(--hot-spacing-medium);
    margin-top: var(--hot-spacing-small);
    display: flex;
    max-width: 85%;
}

.msgUsername {
    font-weight: var(--hot-font-weight-bold);
    padding-right: var(--hot-spacing-small);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 30%;
}

.msgDatetime {
    color: var(--hot-color-neutral-300);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 60%;
}

.maplibregl-popup-close-button {
    font-size: var(--hot-font-size-x-large);
    color: var(--hot-color-neutral-400);
    padding: var(--hot-spacing-2x-small) var(--hot-spacing-small);
    border-radius: var(--hot-border-radius-medium);
}

.popup {
    border-radius: 20px;

}
.popup img,
.popup video {
    max-height: 60vh;
    object-fit: cover;
}
.popup .maplibregl-popup-content {
    box-shadow: 0 0 10px rgba(0,0,0,.3);
    border-radius: 20px;
}

/* Error boundary */

.errorMessage {
    background-color: var(--hot-color-neutral-neutral-100);
    text-align: center;
    padding: var(--hot-spacing-x-large) var(--hot-spacing-4x-large);
    height: 100vh;
}

.errorMessage .header {
    display: block;
}

.errorMessage pre {
    margin: var(--hot-spacing-x-small);
    padding: var(--hot-spacing-x-small);
    border: 1px solid var(--hot-color-primary);
    overflow: hidden;
    text-overflow: ellipsis; 
}

.errorMessage .buttons {
    margin-bottom: var(--hot-spacing-x-large);
    display: inline-flex;
    gap: 10px;
}

.errorMessage h2 {
    font-size: var(--hot-spacing-x-large);
}

.errorMessage h3 {
    font-weight: var(--hot-font-weight-normal);
    font-size: var(--hot-font-size-large);
}

.errorMessage p {
    line-height: var(--hot-letter-spacing-normal);
    margin-bottom: var(--hot-spacing-x-large);
}

.errorMessage .title {
    font-size: var(--hot-font-size-3x-large);
}

.errorMessage .logo {
    height: var(--hot-font-size-3x-large);
}

.error-box {
    padding: var(--hot-spacing-medium) 0;
}

.error {
    color: var(--hot-color-red-950);
}

/* Messages */

.message {
    max-width: 300px;
}

.message .text {
    text-align: left;
    padding-left: var(--hot-spacing-small);
    padding-right: var(--hot-spacing-small);
}

.message .media {
    width: 100%;
    margin-bottom: var(--hot-spacing-x-small);
}

.message .media img,
.message .media video,
.message .media audio {
    width: 100%;
}

.message .dropdownSelection,
.dropdownSelection sl-menu {
    width: 300px;
}

.dropdownSelection sl-dropdown,
.dropdownSelection sl-button,
.dropdownSelection sl-dropdown::part(panel)  {
    width: 100%;
}

.message.removed {
    opacity: .5;
}

.message.removed .removeIcon {
    color: var(--hot-color-primary-400);
    margin-right: 10px;
}

.removeIcon::part(base) {
    height: 20px;
}

.message .removedLabel {
    font-size: var(--hot-font-size-x-small);
}

.message .text.location-only {
    color: var(--hot-color-neutral-500);
    font-style: italic;
}

/* Connect form */

.connectForm {
    padding: var(--hot-spacing-large);
    background-color: var(--hot-color-neutral-0);
    position: absolute;
    top: 150px;
    z-index: 600;
    left: 50%;
    transform: translateX(-50%);
    text-align: left;
    border-radius: var(--hot-border-radius-small);
    box-shadow: var(--hot-shadow-small);
    width: 790px;
}
.connectForm h2 {
    margin-top: 0;
}

.connectForm h3 {
    font-weight: var(--hot-font-weight-normal);
}

.connectForm ol {
    padding-left: var(--hot-spacing-large);
    font-size: var(--hot-font-size-large);
    line-height: var(--hot-line-height-loose);
}

.connectForm hr {
    border: none;
    border-bottom: 1px solid var(--hot-color-warning-300);
}

.connectForm small {
    color: var(--hot-color-neutral-600)
}

.connectForm__warning {
    padding-top: var(--hot-spacing-2x-small);
    font-weight: bold;
    display: flex;
}

.connectForm__warning span {
    padding-left: var(--hot-spacing-x-small);
}

.connectForm__warning sl-icon {
    color: var(--hot-color-danger-700);
}

.qrCode {
    border: 1px solid var(--hot-color-neutral-300);
}

/* Messages */

.count, .loading {
    position: absolute;
    z-index: 600;
}
/* ... */

